# digitaltwin

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
digitaltwin/: app.py  auth.py  config.py  errors.py  gateway_ws.py  mock.py  ratelimit.py  snowflake.py  spec_loader.py
digitaltwin/handlers/: channels.py  events.py  gateway.py  guilds.py  interactions.py  members.py  messages.py  registry.py  roles.py  users.py  webhooks.py
digitaltwin/models/: generated.py
digitaltwin/static/: index.html
digitaltwin/store/: state.py
tests/: conftest.py  test_api.py  test_discordpy_compat.py  test_gateway_ws.py
